--- a/regras-lista.html
+++ b/regras-lista.html
@@ -47,7 +47,7 @@
 
 <body style="font-size: 18px">
     <nav class="navbar navbar-expand-sm navbar-dark">
-        <a class="navbar-brand d-flex align-items-center" href="/bgbh">
+        <a class="navbar-brand d-flex align-items-center" href="/">
             <img src="lista/dist/assets/images/logo_com_sombra.png" width="30" height="30"
                 class="d-inline-block align-top mr-1" alt="">
             BoardgameBH
