editar regras torneio

--- a/torneios.html
+++ b/torneios.html
@@ -89,8 +89,8 @@
                 <span class="font-800">Expansão:</span><span> Não</span>
             </div>
             <div class="col-12">
-                <span class="font-800">Duração da partida:</span><span>30 minutos (Estimativa de 15min. por
-                    jogador</span>
+                <span class="font-800">Duração da partida:</span>
+                <span>30 minutos (Estimativa de 15min. por jogador</span>
             </div>
 
         </div>
@@ -267,7 +267,7 @@
         <div>
             <h4 class="font-800 text-green mb-4">
                 <i class="fas fa-exclamation-triangle icon-color"></i>
-                INFORMÇÕES IMPORTANTES
+                INFORMAÇÕES IMPORTANTES
             </h4>
             <div class="fs-6 font-800 mb-2">DESCLASSIFICAÇÃO AUTOMÁTICA</div>
             <div>
@@ -303,7 +303,7 @@
         <div>
             <h4 class="font-800 text-green mb-4">
                 <i class="fas fa-table icon-color"></i>
-                INFORMAÇÕES IMPORTANTES
+                SOBRE O FORMATO SUIÇO
             </h4>
             <div class="fs-6 font-800 mb-2">COMO FUNCIONA O FORMATO SUIÇO?</div>
             <div>
@@ -415,40 +415,33 @@
             </div>
         </div>
         <hr />
-        <div class="container torneios-rodape">
+        <div class="torneios-rodape">
             <div class="row text-center">
-                <div class="col-12 col-lg-3 logos-realizacao">
+                <div class="col-6 col-lg-3 logos-realizacao mt-3">
                     <div class="font-800 mb-2">REALIZAÇÃO</div>
                     <a href="" target="_blank">
                         <img src="images/logo_preto.png" alt="BoardgameBH">
                     </a>
                 </div>
-                <div class="col-12 col-lg-4 logos-patrocinio">
+                <div class="col-6 col-lg-4 logos-patrocinio mt-3">
                     <div class="font-800 mb-2">PATROCÍNIO</div>
                     <a href="https://www.moonstonejogos.com/" target="_blank">
                         <img src="/images/torneios/logos/LOGO-MOOSTONE.PNG" alt="Moonstone Jogos" />
                     </a>
                 </div>
-                <div class="col-12 col-lg-5 logos-apoio">
+                <div class="col-12 col-lg-5 logos-apoio mt-3">
                     <div class="font-800 mb-2">APOIO</div>
-                    <div class="row d-flex align-items-center">
-                        <div class="col-sm">
-                            <a href="www.carcassonnebrasil.com" target="_blank">
-                                <img src="/images/torneios/logos/IconeFundoBranco2 shaid.png"
-                                    alt="Carcassonne Brasil" />
-                            </a>
-                        </div>
-                        <div class="col-sm">
-                            <a href="http://mesasecreta.com.br/" target="_blank">
-                                <img src="/images/torneios/logos/logo_alpha.png" alt="Mesa Secreta" />
-                            </a>
-                        </div>
-                        <div class="col-sm">
-                            <a href="https://www.instagram.com/tabulovers/" target="_blank">
-                                <img src="/images/torneios/logos/assinatura-tabulovers-ARTE-capa-copiarrascunhp.png"
-                                    alt="Tabulovers" />
-                            </a>
-                        </div>
+                    <div class="d-flex align-items-center justify-content-around">
+                        <a href="www.carcassonnebrasil.com" target="_blank">
+                            <img src="/images/torneios/logos/IconeFundoBranco2 shaid.png" alt="Carcassonne Brasil" />
+                        </a>
+                        <a href="http://mesasecreta.com.br/" target="_blank">
+                            <img src="/images/torneios/logos/logo_alpha.png" alt="Mesa Secreta" />
+                        </a>
+                        <a href="https://www.instagram.com/tabulovers/" target="_blank">
+                            <img src="/images/torneios/logos/assinatura-tabulovers-ARTE-capa-copiarrascunhp.png"
+                                alt="Tabulovers" />
+                        </a>
                     </div>
                 </div>
             </div>
