Configurar eventos google analytics

--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-187241035-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'UA-187241035-1');
@@ -15,7 +18,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1K2MBCJ50J"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'G-1K2MBCJ50J');
@@ -23,7 +29,10 @@
 
     <!-- Google Analytics -->
     <script>
-        window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+        window.ga = window.ga || function () {
+            (ga.q = ga.q || []).push(arguments)
+        };
+        ga.l = +new Date;
         ga('create', 'UA-187241035-1', 'auto');
         ga('send', 'pageview');
     </script>
@@ -110,8 +119,8 @@
                                     <p>
                                         Mas você já pode aproveitar nossa lista de <strong>trocas & vendas</strong>
                                         (exclusiva BH),
-                                        <br class="hidden-sm" />
-                                        nossos <strong>desafios e torneios</strong> e também conhecer nossos
+                                        <br class="hidden-sm" /> nossos <strong>desafios e torneios</strong> e também
+                                        conhecer nossos
                                         <strong>grupos de whatsapp</strong>
                                     </p>
                                 </header>
@@ -168,8 +177,8 @@
                                     <a href="/regras-lista.html" target="_blank">regras de utilização</a> da Lista de
                                     Trocas & Vendas
                                 </p>
-                                <p class="highlight red aviso-responsabilidade">Nenhuma negociação utilizando a
-                                    Lista de Trocas & Vendas é de responsabilidade do Boardgame BH</p>
+                                <p class="highlight red aviso-responsabilidade">Nenhuma negociação utilizando a Lista de
+                                    Trocas & Vendas é de responsabilidade do Boardgame BH</p>
                             </div>
                         </div>
                     </section>
@@ -221,7 +230,8 @@
                                             <i class="fas fa-chess-rook"></i> Desafios e Torneios
                                         </h2>
                                         <article data-aos-duration="15000" data-aos="fade-right" data-aos-delay="300">
-                                            <a href="/torneios.html" target="_blank" class="image featured">
+                                            <a onclick="ga('send', 'event', 'Ver regras torneio', 'click-imagem');"
+                                                href="/torneios.html" target="_blank" class="image featured">
                                                 <img src="images/torneios/TORNEIOS-Carcassonne.png"
                                                     alt="Torneio Carcassonne">
                                             </a>
@@ -244,8 +254,10 @@
 												lectus semper
 												mod quisturpis nisi consequat etiam lorem sed amet quam turpis.</p> -->
                                             <footer>
-                                                <a href="/torneios.html" target="_blank" class="button alt solid"> Saiba
-                                                    mais </a>
+                                                <a href="/torneios.html" target="_blank" class="button alt solid"
+                                                    onclick="ga('send', 'event', 'Ver regras torneio', 'click-botao');">
+                                                    Saiba mais
+                                                </a>
                                             </footer>
                                         </article>
                                     </section>
@@ -278,15 +290,14 @@
                                                     </h3>
                                                 </header>
                                                 <p>O grupo é <span class="font-800">EXCLUSIVO</span> para Belo Horizonte
-                                                    e Região e tem como foco os
-                                                    anúncios de trocas e vendas entre seus usuários. O grupo possui
-                                                    regras bem definidas para otimizar sua funcionalidade. </p>
+                                                    e Região e tem como foco os anúncios de trocas e vendas entre seus
+                                                    usuários. O grupo possui regras bem definidas para otimizar sua
+                                                    funcionalidade.
+                                                </p>
                                                 <p class="font-red restricoes-grupos font-800">
-                                                    <span class="font-dark-red">Restrições:</span>
-                                                    Chat moderado.
+                                                    <span class="font-dark-red">Restrições:</span> Chat moderado.
                                                     <span style="font-weight: 500;"> Participação limitada a usuários
-                                                        que</span>
-                                                    consigam entregar os jogos em Belo Horizonte.
+                                                        que</span> consigam entregar os jogos em Belo Horizonte.
                                                 </p>
                                             </div>
                                         </article>
@@ -310,9 +321,10 @@
                                                     </h3>
                                                 </header>
                                                 <p>Grupo voltado para a interação entre amantes de Boardgame. BG é o que
-                                                    nos uni mas um bom papo fora do tema não é proibido. Novidades,
+                                                    nos une mas um bom papo fora do tema não é proibido. Novidades,
                                                     jogatinas online, presenciais, dúvidas sobre regras, indicações.
-                                                    Aqui é o lugar. A única exigência é o bom senso. </p>
+                                                    Aqui
+                                                    é o lugar. A única exigência é o bom senso. </p>
                                                 <p class="font-red restricoes-grupos">
                                                     <span class="font-dark-red font-800">Restrições:</span> Sem
                                                     restrições
@@ -337,14 +349,12 @@
                                                             - Ofertas BG</a></h3>
                                                 </header>
                                                 <p>
-                                                    <strong class="font-green">NOVIDADE!</strong>
-                                                    Grupo voltado para divulgação de oportunidades e ofertas de
-                                                    Boardgames. Suas regras e funcionalidade ainda estão sendo
-                                                    definidas.
+                                                    <strong class="font-green">NOVIDADE!</strong> Grupo voltado para
+                                                    divulgação de oportunidades e ofertas de Boardgames. Suas regras e
+                                                    funcionalidade ainda estão sendo definidas.
                                                 </p>
                                                 <p class="font-red restricoes-grupos font-800">
-                                                    <span class="font-dark-red">Restrições:</span>
-                                                    Sem chat
+                                                    <span class="font-dark-red">Restrições:</span> Sem chat
                                                 </p>
                                             </div>
                                         </article>
@@ -397,8 +407,8 @@
                                     região como carro chefe, mas não possui fronteiras, promovendo
                                     e realizando ações de amplo interesse e com um público espalhado por todo país, como
                                     torneios online, divulgação de lançamentos e conteúdo digital. Diversos braços do
-                                    projeto ainda estão em desenvolvimento e em breve serão
-                                    apresentados para o grande público. Enquanto isso, aproveite todas as
+                                    projeto ainda estão em desenvolvimento e em breve
+                                    serão apresentados para o grande público. Enquanto isso, aproveite todas as
                                     funcionalidades liberadas e não deixe de apoiar esse e os demais projetos voltados
                                     para o nosso hobby. Let’s Play!
                                 </p>
