--- a/torneios.html
+++ b/torneios.html
@@ -21,6 +21,18 @@
         gtag('config', 'G-1K2MBCJ50J');
     </script>
 
+    <!-- Google Analytics -->
+    <script>
+        window.ga = window.ga || function () {
+            (ga.q = ga.q || []).push(arguments)
+        };
+        ga.l = +new Date;
+        ga('create', 'UA-187241035-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <!-- End Google Analytics -->
+
     <script data-ad-client="ca-pub-3851012828743137" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
@@ -114,8 +126,32 @@
             <div class="mt-2">
                 Cada torneio classificatório acontecerá em <span class="font-800">formato suiço</span>, com
                 <span class="font-800">4 rodadas</span> (partidas) de duração.
-                Ao final das 4 rodadas os 8 melhores colocados de cada torneio classificatório irão garantir uma vaga
-                para a fase final.
+                <br />
+                <span class="font-800">
+                    Ao final das 4 rodadas os 8 melhores colocados de cada torneio classificatório irão garantir uma
+                    vaga
+                    para a fase final.
+                </span>
+                <div class="mt-2">
+                    <span class="font-800">CLASSIFICATÓRIA 1</span>
+                    - Quinta-Feira, 21 de Janeiro.
+                    <span class="font-800">20h</span>
+                </div>
+                <div>
+                    <span class="font-800">CLASSIFICATÓRIA 2</span>
+                    - Sábado, 23 de Janeiro.
+                    <span class="font-800">10h</span>
+                </div>
+                <div>
+                    <span class="font-800">CLASSIFICATÓRIA 3</span>
+                    - Quinta-Feira, 28 de Janeiro.
+                    <span class="font-800">20h</span>
+                </div>
+                <div>
+                    <span class="font-800">CLASSIFICATÓRIA 4</span>
+                    - Sábado, 30 de Janeiro.
+                    <span class="font-800">10h</span>
+                </div>
             </div>
             <div class="font-800 text-light-green mt-4 fs-5">FASE FINAL</div>
             <span class="text-light-green">7 de Fevereiro (domingo)</span>
@@ -202,27 +238,23 @@
                 </div>
                 <div>
                     <span class="font-800">CLASSIFICATÓRIA 1</span>
-                    - Quinta-Feira, 21 de Janeiro.
-                    <span class="font-800">20h</span>
                     <span class="font-800">R$ 3,00</span>
+                    - Inscrições até 12h do dia 21/01
                 </div>
                 <div>
                     <span class="font-800">CLASSIFICATÓRIA 2</span>
-                    - Sábado, 23 de Janeiro.
-                    <span class="font-800">20h</span>
                     <span class="font-800">R$ 3,00</span>
+                    - Inscrições até 22h do dia 22/01
                 </div>
                 <div>
                     <span class="font-800">CLASSIFICATÓRIA 3</span>
-                    - Quinta-Feira, 28 de Janeiro.
-                    <span class="font-800">20h</span>
                     <span class="font-800">R$ 3,00</span>
+                    - Inscrições até 12h do dia 28/01
                 </div>
                 <div>
                     <span class="font-800">CLASSIFICATÓRIA 4</span>
-                    - Sábado, 30 de Janeiro.
-                    <span class="font-800">20h</span>
                     <span class="font-800">R$ 3,00</span>
+                    - Inscrições até 22h do dia 29/01
                 </div>
             </div>
             <div class="mt-4 font-800 fs-6">
@@ -244,7 +276,8 @@
                 <a href="mailto:boardgamebhz@gmail.com">boardgamebhz@gmail.com</a>
             </div>
             <div class="mt-4">
-                <a class="btn btn-success btn-md" href="https://forms.gle/YHqcns5VhvtaNqeM9" target="_blank">FAZER
+                <a onclick="ga('send', 'event', 'inscrição torneio', 'click-inscricao-carcassonne');"
+                    class="btn btn-success btn-md" href="https://forms.gle/YHqcns5VhvtaNqeM9" target="_blank">FAZER
                     INSCRIÇÃO</a>
             </div>
         </div>
