trocar banner time machine por carcassonne

--- a/site/index.html
+++ b/site/index.html
@@ -191,10 +191,10 @@
                     <!-- Feature 2 -->
                     <section class="container box feature2 banner-area banner-unico">
                         <div class="d-flex align-center justify-center banner-pequeno">
-                            <a href="https://www.catarse.me/timemachinerocket" target="_blank"
-                                onclick="ga('send', 'event', 'Time Machine Rocket Banner', 'click-banner-unico');">
-                                <img class="banner-ads-90" src="images/banners/banner_timemachine_728x90.png"
-                                    alt="banner Time Machine Rocket" />
+                            <a href="http://www.bgbh.com.br/torneios.html" target="_blank"
+                                onclick="ga('send', 'event', 'Torneio Carcassonne', 'click-banner-unico');">
+                                <img class="banner-ads-90" src="images/banners/carcassonne-728x90.png"
+                                    alt="banner torneio carcassonne" />
                             </a>
                         </div>
                     </section>
@@ -204,14 +204,14 @@
             <div class="wrapper style2 banners-grandes visible-sm">
                 <div class="inner">
                     <!-- Feature 2 -->
+
                     <section class="container box feature2 d-flex align-center" id="banner-ads-center">
-                        <a href="https://www.catarse.me/timemachinerocket" target="_blank"
-                            onclick="ga('send', 'event', 'Banner', 'click-banner-duplo', 1);">
-                            <img class="banner-ads-270" src="images/banners/banner_timemachine_500x270.png"
-                                alt="banner" />
+                        <a href="http://90games.com.br/" target="_blank"
+                            onclick="ga('send', 'event', 'Banner Center', 'click-banner-duplo', 2);">
+                            <img class="banner-ads-270" src="images/banners/banner_90games.png" alt="banner" />
                         </a>
                         <a class="hidden-sm" href="https://tabulovers.wixsite.com/tabulovers" target="_blank"
-                            onclick="ga('send', 'event', 'Banner', 'click-banner-duplo', 2);">
+                            onclick="ga('send', 'event', 'Banner Center', 'click-banner-duplo', 2);">
                             <img class="banner-ads-270" src="images/banners/banner-tabulovers.png" alt="banner" />
                         </a>
                     </section>
