--- a/torneios.html
+++ b/torneios.html
@@ -232,16 +232,16 @@
                 INSCRIÇÃO
             </h4>
             <div class="mt-3">
-                <div class="font-800">
+                <div class="font-800 text-decoration-line-through">
                     PACOTE PARA 4 CLASSIFICATÓRIAS - R$ 10,00
                     <span class="text-pure-red">(PACOTE LIMITADO)</span>
                 </div>
-                <div>
+                <div class="text-decoration-line-through">
                     <span class="font-800">CLASSIFICATÓRIA 1</span>
                     <span class="font-800">R$ 3,00</span>
-                    - Inscrições até 12h do dia 21/01
+                    - Inscrições até 18h do dia 21/01
                 </div>
-                <div>
+                <div class="text-decoration-line-through">
                     <span class="font-800">CLASSIFICATÓRIA 2</span>
                     <span class="font-800">R$ 3,00</span>
                     - Inscrições até 22h do dia 22/01
@@ -249,7 +249,7 @@
                 <div>
                     <span class="font-800">CLASSIFICATÓRIA 3</span>
                     <span class="font-800">R$ 3,00</span>
-                    - Inscrições até 12h do dia 28/01
+                    - Inscrições até 19h do dia 28/01
                 </div>
                 <div>
                     <span class="font-800">CLASSIFICATÓRIA 4</span>
@@ -465,7 +465,7 @@
                 <div class="col-12 col-lg-5 logos-apoio mt-3">
                     <div class="font-800 mb-2">APOIO</div>
                     <div class="d-flex align-items-center justify-content-around">
-                        <a href="www.carcassonnebrasil.com" target="_blank">
+                        <a href="https://www.carcassonnebrasil.com/" target="_blank">
                             <img src="/images/torneios/logos/IconeFundoBranco2 shaid.png" alt="Carcassonne Brasil" />
                         </a>
                         <a href="http://mesasecreta.com.br/" target="_blank">
