Alterações desafio Sushi Go

--- a/site/index.html
+++ b/site/index.html
@@ -187,14 +187,54 @@
                         </div>
                     </div>
                 </div>
+                <div class="mt-4">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-lg-6">
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjJh7t4QCed_GncUA3ogVlUaiP_o3teyAsT7ILVB3hFYBxCg/viewform?usp=sf_link"
+                                    target="_blank"
+                                    onclick="ga('send', 'event', 'Inscrever Desafio Sushi Go', 'click-botao-sushi-go');">
+                                    <img src="images/torneios/615x330SushiGo.png" class="card-img-top"
+                                        alt="Desafio Online Sushi Go">
+                                </a>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card-body">
+                                    <p class="font-800">DESAFIO ONLINE DE SUSHI GO</p>
+                                    <p class="card-text">Você é um grande apreciador de comida oriental? Não importa! É
+                                        hora de tentar pegar a melhor combinação de pratos, coletar o maior número de
+                                        rolos de sushi ou fazer um conjunto completo de sashimi. Mergulhe o nigiri
+                                        favorito em wasabi para triplicar o seu valor! E ser o grande vencedor desse
+                                        desafio simples, rápido e divertido.
+                                    </p>
+                                    <p class="mt-3">
+                                        <span class="font-800">Importante:</span>
+                                        <span>
+                                            O desafio será realizado na plataforma
+                                            <strong>Boardgame Arena (BGA)</strong>
+                                            e possui duas etapas independentes de classificação, não sendo
+                                            necessário participação em todas as etapas e nem etapas anteriores. Sua
+                                            final ocorre no mesmo dia da seguda etapa de classificação.
+                                        </span>
+                                    </p>
+                                    <p class="card-text">
+                                        <a href="/desafios.html" target="_blank" class="btn btn-dark"
+                                            onclick="ga('send', 'event', 'Inscrever Desafio Sushi Go', 'click-botao-sushi-go');">
+                                            Fazer inscrição </a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="py-4 mt-5 banner-ads--center container-fluid" id="banner-ads--center-unico">
             <div class="d-flex align-items-center justify-content-center">
-                <a href="http://www.bgbh.com.br/torneios.html" target="_blank"
-                    onclick="ga('send', 'event', 'Torneio Carcassonne', 'click-banner-unico');">
-                    <img class="img-fluid banner-ads-90" src="images/banners/carcassonne-728x90.png"
-                        alt="banner torneio carcassonne" />
+                <a href="/desafios.html" target="_blank"
+                    onclick="ga('send', 'event', 'Desafio Sushi Go', 'click-banner-unico');">
+                    <img class="img-fluid banner-ads-90" src="images/banners/728x90SushiGo.png"
+                        alt="banner desafio sushi go" />
                 </a>
             </div>
         </div>
