--- a/site/index.html
+++ b/site/index.html
@@ -143,6 +143,14 @@
                 <hr />
                 <hr />
             </div>
+            <!-- <div class="py-4 mt-5 container-fluid" id="banner-workshop">
+                <div class="d-flex align-items-center justify-content-center">
+                    <a href="https://docs.google.com/spreadsheets/d/1QaQjJokPVTPVScvSuy-KpAYN_rwa7nta_XkIybT7zhM/edit#gid=522994808"
+                        target="_blank">
+                        <img class="img-fluid" src="images/workshop-colt-express.jpeg" alt="Workshop Colt Express" />
+                    </a>
+                </div>
+            </div> -->
             <div id="desafios_e_torneios_anchor"></div>
             <div class="pt-5" id="desafios_e_torneios" data-aos-duration="15000" data-aos="fade-down-right">
                 <i class="bi bi-puzzle-fill custom-color--a7 fs-3"></i>
