--- a/site/workshop.html
+++ b/site/workshop.html
@@ -29,7 +29,7 @@
 
     <!-- Google Analytics -->
     <script>
-        window.ga = window.ga || function() {
+        window.ga = window.ga || function () {
             (ga.q = ga.q || []).push(arguments)
         };
         ga.l = +new Date;
@@ -39,7 +39,8 @@
     <script async src='https://www.google-analytics.com/analytics.js'></script>
     <!-- End Google Analytics -->
 
-    <script data-ad-client="ca-pub-3851012828743137" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-3851012828743137" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,17 +56,21 @@
     <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
     <link href="lista/dist/assets/styles/style.css" rel="stylesheet" type="text/css">
     <title>WORKSHOP COLT EXPRESS</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,500&display=swap"
+        rel="stylesheet">
 </head>
 
 <body style="font-size: 14px;">
     <nav class="navbar navbar-expand-sm navbar-dark px-4">
         <a class="navbar-brand d-flex align-items-center" href="/">
-            <img src="lista/dist/assets/images/logo_com_sombra.png" width="30" height="30" class="d-inline-block align-top me-2" alt="Boardgame BH"> BoardgameBH
+            <img src="lista/dist/assets/images/logo_com_sombra.png" width="30" height="30"
+                class="d-inline-block align-top me-2" alt="Boardgame BH"> BoardgameBH
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -82,19 +87,21 @@
             <i class="fas fa-chess-rook icon-color"></i> WORKSHOP COLT EXPRESS
         </h4>
         <div class="mb-2">
-            Seja bem vindo Fora da Lei. Nosso workshop tem como objetivo te ensinar os primeiros passos para subir nessa Locomotiva em movimento. O sucesso na aventura dependerá de você.
+            Seja bem vindo Fora da Lei. Nosso workshop tem como objetivo te ensinar os primeiros passos para subir nessa
+            Locomotiva em movimento. O sucesso na aventura dependerá de você.
         </div>
         <div class="row">
             <div class="col-12">
                 <span class="font-800 text-pure-red">Atenção:</span>
                 <span>
-                    Para participar dos ensinamentos você precisará de uma conta gratuita do 
+                    Para participar dos ensinamentos você precisará de uma conta gratuita do
                     <span class="font-800">Boardgame Arena (BGA)</span> e também no
-                <span class="font-800">Discord</span>.
+                    <span class="font-800">Discord</span>.
                 </span>
             </div>
             <div class="col-12 mt-2">
-                Caso ainda não possua conta em alguma plataforma os links seguem abaixo. Caso já possua, desconsidere os botões e siga até as inscrições.
+                Caso ainda não possua conta em alguma plataforma os links seguem abaixo. Caso já possua, desconsidere os
+                botões e siga até as inscrições.
             </div>
             <div class="col-12 mt-2">
                 <a href="https://boardgamearena.com/?sp=1epczi" target="_blank" class="me-3 mt-1">
@@ -112,10 +119,14 @@
             </h4>
             <div class="mt-3">
                 <ol>
-                    <li>Acesse a <span class="font-800">planilha</span> contendo as informações de disponibilidade de <span class="font-800">mesas e horários</span> abaixo</li>
+                    <li>Acesse a <span class="font-800">planilha</span> contendo as informações de disponibilidade de
+                        <span class="font-800">mesas e horários</span> abaixo
+                    </li>
                     <li>
                         Mande uma mensagem direta para o whatsapp
-                        <a target="_blank" class="font-800" href="https://chat.whatsapp.com/+553188049591" onclick="ga('send', 'event', 'Inscrição Workshop Whatsapp', 'click', 'colt express');">31 8804-9591</a>, contendo:
+                        <a target="_blank" class="font-800" href="https://wa.link/nr6644"
+                            onclick="ga('send', 'event', 'Inscrição Workshop Whatsapp', 'click', 'colt express');">31
+                            8804-9591</a>, contendo:
                         <ul>
                             <li><span class="font-800">Nome e sobrenome</span></li>
                             <li>Nome de usuário no <span class="font-800">BGA</span></li>
@@ -127,7 +138,9 @@
                 </ol>
             </div>
             <div class="mt-4">
-                <a onclick="ga('send', 'event', 'inscrição workshop', 'click-inscricao-workshop');" href="https://docs.google.com/spreadsheets/d/1QaQjJokPVTPVScvSuy-KpAYN_rwa7nta_XkIybT7zhM/edit#gid=522994808" target="_blank">
+                <a onclick="ga('send', 'event', 'inscrição workshop', 'click-inscricao-workshop');"
+                    href="https://docs.google.com/spreadsheets/d/1QaQjJokPVTPVScvSuy-KpAYN_rwa7nta_XkIybT7zhM/edit#gid=522994808"
+                    target="_blank">
                     <button class="btn btn-sm btn-secondary font-800">PLANILHA DE MESAS E HORÁRIOS</button>
                 </a>
             </div>
@@ -139,11 +152,17 @@
             </h4>
             <ul>
                 <li>
-                    A planilha só pode ser <span class="font-800">visualizada</span>. Utilize-a para <span class="font-800">escolher</span> a sua mesa e posteriormente <span class="font-800">confirmar</span> a efetivação da sua inscrição
+                    A planilha só pode ser <span class="font-800">visualizada</span>. Utilize-a para <span
+                        class="font-800">escolher</span> a sua mesa e posteriormente <span
+                        class="font-800">confirmar</span> a efetivação da sua inscrição
                 </li>
-                <li>Após a confirmação basta estar <span class="font-800">online</span> no <span class="font-800">canal BGBH</span> do <span class="font-800">Discord, 10 minutos</span> antes do horário escolhido, no dia de sua partida.</li>
-                <li>Caso tenha algum <span class="font-800">imprevisto</span>, informe os organizadores, para que sua vaga seja disponibilizada para outro jogador.</li>
-                <li>Caso o jogador não esteja online no horário combinado outro jogador poderá ser convidado para ocupar a vaga</li>
+                <li>Após a confirmação basta estar <span class="font-800">online</span> no <span class="font-800">canal
+                        BGBH</span> do <span class="font-800">Discord, 10 minutos</span> antes do horário escolhido, no
+                    dia de sua partida.</li>
+                <li>Caso tenha algum <span class="font-800">imprevisto</span>, informe os organizadores, para que sua
+                    vaga seja disponibilizada para outro jogador.</li>
+                <li>Caso o jogador não esteja online no horário combinado outro jogador poderá ser convidado para ocupar
+                    a vaga</li>
             </ul>
         </div>
         <hr />
@@ -157,11 +176,12 @@
                 </a>
             </div>
             <div class="font-800 mt-4">
-                <i class="bi bi-instagram"></i> SIGA TAMBÉM O NOSSO INSTAGRAM, E FIQUE POR DENTRO DE TUDO QUE ROLA NO BGBH!
+                <i class="bi bi-instagram"></i> SIGA TAMBÉM O NOSSO INSTAGRAM, E FIQUE POR DENTRO DE TUDO QUE ROLA NO
+                BGBH!
             </div>
             <div class="mt-2">
                 <a href="https://www.instagram.com/boardgamebh" target="_blank">
-                    <button class="btn btn btn-secondary font-800 btn-sm">    
+                    <button class="btn btn btn-secondary font-800 btn-sm">
                         INSTAGRAM
                     </button>
                 </a>
@@ -175,10 +195,15 @@
                     <img src="/images/map/logos-colt.png" class="image-map" usemap="#image-map">
 
                     <map name="image-map">
-                        <area id="BoardgameBH" alt="BoardgameBH" title="BoardgameBH" href="http://www.bgbh.com.br/" shape="rect" coords="53,17,216,244" style="outline:none;" target="_blank" />
-                        <area id="MeepleBR" alt="MeepleBR" title="MeepleBR" href="http://www.meeplebr.com" shape="rect" coords="298,4,537,244" style="outline:none;" target="_blank" />
-                        <area id="TavernaReal" alt="Taverna Real" title="Taverna Real" href="https://www.tavernareal.com/" shape="rect" coords="563,0,706,244" style="outline:none;" target="_blank" />
-                        <area id="MesaSecreta" alt="Mesa Secreta" title="Mesa Secreta" href="http://mesasecreta.com.br/" shape="rect" coords="802,0,997,244" style="outline:none;" target="_blank" />
+                        <area id="BoardgameBH" alt="BoardgameBH" title="BoardgameBH" href="http://www.bgbh.com.br/"
+                            shape="rect" coords="53,17,216,244" style="outline:none;" target="_blank" />
+                        <area id="MeepleBR" alt="MeepleBR" title="MeepleBR" href="http://www.meeplebr.com" shape="rect"
+                            coords="298,4,537,244" style="outline:none;" target="_blank" />
+                        <area id="TavernaReal" alt="Taverna Real" title="Taverna Real"
+                            href="https://www.tavernareal.com/" shape="rect" coords="563,0,706,244"
+                            style="outline:none;" target="_blank" />
+                        <area id="MesaSecreta" alt="Mesa Secreta" title="Mesa Secreta" href="http://mesasecreta.com.br/"
+                            shape="rect" coords="802,0,997,244" style="outline:none;" target="_blank" />
 
                     </map>
                 </div>
@@ -187,7 +212,11 @@
     </div>
 
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 
 </html>
