--- a/desafios-001.html
+++ b/desafios-001.html
@@ -213,7 +213,7 @@
             </div>
             <div class="mt-4">
                 <a onclick="ga('send', 'event', 'inscrição desafio', 'click', 'desafio sushi go');"
-                    class="btn btn-success btn-md" href="https://forms.gle/BCFBCeamFQKM9LQh6" target="_blank">FAZER
+                    class="btn btn-primary btn-md" href="https://forms.gle/BCFBCeamFQKM9LQh6" target="_blank">FAZER
                     INSCRIÇÃO</a>
             </div>
         </div>
@@ -392,7 +392,7 @@
                 TORNEIOS DA BGBH.
             </div>
             <div class="mt-4">
-                <a class="btn btn-success btn-sm" href="https://chat.whatsapp.com/KTH6MSuPHNiAoOPgaFbN0n"
+                <a class="btn btn-primary btn-sm" href="https://chat.whatsapp.com/KTH6MSuPHNiAoOPgaFbN0n"
                     target="_blank">Entrar no grupo</a>
             </div>
         </div>
